[gd_scene load_steps=4 format=3 uid="uid://cxs4dx31u80ul"]

[ext_resource type="Script" path="res://cannonball.gd" id="1_amcic"]
[ext_resource type="Texture2D" uid="uid://qpkqqm86jloc" path="res://sprites/cannonball.png" id="2_3t4nb"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vdqvh"]
radius = 20.025

[node name="Area2D" type="Area2D"]
script = ExtResource("1_amcic")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_3t4nb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vdqvh")

[node name="VisibilityNotifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_visibility_notifier_screen_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
